/*
 * Copyright 2023 RobustMQ Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package storage.engine;

/** Error **/
message StorageEngineError {
  string code = 1;
  string error = 2;
}

/** Header **/
enum ApiKey {
  Unimplemented = 0;
  Read = 1;
  Write = 2;
}

enum ApiVersion {
  V0 = 0;
}

enum ReadType {
  Offset = 0;
  Key = 1;
  Tag = 2;
}

message ReqHeader {
  ApiKey api_key = 1;
  ApiVersion api_version = 2;
}

message RespHeader {
  ApiKey api_key = 1;
  ApiVersion api_version = 2;
  StorageEngineError error = 3;
}

/** Write Request **/
message WriteReqBody {
  repeated WriteReqSegmentMessages data = 1;
}

message WriteReqSegmentMessages {
  string shard_name = 2;
  uint32 segment = 3;
  repeated WriteReqMessages messages = 4;
}

message WriteReqMessages {
  uint64 pkid = 1;
  string key = 2;
  bytes value = 3;
  repeated string tags = 4;
}

message WriteRespBody {
  repeated WriteRespMessage status = 1;
}

message WriteRespMessage {
  string shard_name = 2;
  uint32 segment = 3;
  repeated WriteRespMessageStatus messages = 4;
}

message WriteRespMessageStatus {
  uint64 offset = 1;
  uint64 pkid = 2;
  StorageEngineError error = 3;
}

message WriteReq {
  ReqHeader header = 1;
  WriteReqBody body = 2;
}

message WriteResp {
  RespHeader header = 1;
  WriteRespBody body = 2;
}

/**  Read Request **/
message ReadReqBody {
  repeated ReadReqMessage messages = 2;
}

message ReadReqMessage {
  string shard_name = 2;
  uint32 segment = 3;
  ReadType ready_type = 4;
  ReadReqFilter filter = 5;
  ReadReqOptions options = 6;
}

message ReadReqFilter {
  uint64 timestamp = 1;
  uint64 offset = 2;
  string key = 3;
  string tag = 4;
}

message ReadReqOptions {
  uint64 max_size = 1;
  uint64 max_record = 2;
}

message ReadRespBody {
  repeated ReadRespSegmentMessage messages = 1;
}

message ReadRespSegmentMessage {

  string shard_name = 2;
  uint32 segment = 3;
  repeated ReadRespMessage messages = 4;
}

message ReadRespMessage {
  uint64 offset = 1;
  string key = 2;
  bytes value = 3;
  repeated string tags = 4;
  uint64 timestamp = 5;
}

message ReadReq {
  ReqHeader header = 1;
  ReadReqBody body = 2;
}

message ReadResp {
  RespHeader header = 1;
  ReadRespBody body = 2;
}

